# cloconepalinternship2025

./: README.md  package.json  tailwind.config.ts
2025-01-20/: README.md
2025-01-21/: README.md
2025-02-27/store/: pyproject.toml
2025-02-27/store/core/: .gitignore  db.sqlite3
2025-02-27/store/core/books/: admin.py  authentication.py  models.py  serializers.py  urls.py  views.py
2025-02-27/store/core/books/migrations/: 0001_initial.py  0002_author_category_user_order_user_book_authors_and_more.py  0003_alter_review_unique_together_remove_order_user_and_more.py  0004_alter_author_id_alter_book_id_alter_category_id_and_more.py  0005_alter_book_authors_alter_book_categories.py  0006_alter_book_authors_alter_book_categories.py  0007_review_user.py  0008_order_user.py  0009_order_quantity.py  0010_remove_order_quantity.py
2025-02-27/store/core/core/: settings.py  urls.py
2025-02-27/store/core/users/: admin.py  models.py  serializers.py  urls.py  views.py
2025-02-27/store/core/users/migrations/: 0001_initial.py  0002_rename_phone_number_customuser_phone_and_more.py  0003_alter_customuser_phone.py
2025-03-06/jwt-auth/: pyproject.toml
2025-03-06/jwt-auth/learningJWT/: manage.py
2025-03-06/jwt-auth/learningJWT/base/: models.py  serializers.py  urls.py  views.py
2025-03-06/jwt-auth/learningJWT/base/migrations/: 0001_initial.py  0002_alter_item_created.py
2025-03-06/jwt-auth/learningJWT/learningJWT/: asgi.py  settings.py  urls.py  wsgi.py
2025-03-06/jwt-auth/learningJWT/userauth/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
(+117 files in other folders)
